@@ -1,5 +1,6 @@
 1.3.8 - TBD
 
+* Replaced the preview window scaling buttons with a drop-down list.
 * Added Entities tab in the Render Controls dialog, allowing posing and
   skinning of player entities.
 * Fixed chunk loading error that caused Chunky to hang while loading chunks
